Fix horizontal scrolling on webkit

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -15,7 +15,7 @@ html, body {
 }
 #loading-animation.overlay {
     opacity: 0.4;
-    z-index: 99;
+    z-index: 110;
 }
 
     #loading-animation .spacer {
@@ -69,4 +69,8 @@ html, body {
 /* Override webix lameness */
 #opstool-app .webix_scroll_cont {
     overflow: visible;
+    width: intrinsic;           /* Safari/WebKit uses a non-standard name */
+    width: -moz-max-content !important;    /* Firefox/Gecko */
+    width: -webkit-max-content !important; /* Chrome */    
+    width: max-content !important;
 }
